fix free input button visibility

--- a/src/app-components/StudyMode/_studyComponent.scss
+++ b/src/app-components/StudyMode/_studyComponent.scss
@@ -184,11 +184,13 @@
 
 .settings{
   .settings-menu{
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
     //add box shadow when real colors
     width: 750px;
     background-color: $sidebar-color;
     border-radius: 5px;
-    padding: 5px;
+    padding: 15px;
     margin-bottom: 5px;
     .title{
       margin-top: 15px;
@@ -241,4 +243,25 @@
       width: 24px;
     }
   }
+}
+
+
+.free-input{
+  padding: 20px;
+  .term{
+    font-size: 30px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .free-input{
+    input{
+      height: 4vmax;
+      font-size: 15px;
+    }
+    button{
+      font-size: 15px !important;
+      padding: 10px !important;
+    }
+  }
+  
 }
